fix header spacing to align with website content

--- a/style/styles.css
+++ b/style/styles.css
@@ -43,6 +43,15 @@ a {
     align-items: center;
 }
 
+.header-inner {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 1100px;
+}
+
 .logo {
     color: white;
     font-weight: 700;
